Structure of page added with new folders and empty files

--- a/index.html
+++ b/index.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Hierror</title>
+    <title>hierror</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+    <script src="js/main.js"></script>
 </head>
+
 <body>
-    <h1>EU SOU O HIERRO!</h1>
+    <header>
+        <h1>hierror</h1>
+        <ul>
+            <li>Twitter</li>
+            <li>Linkedin</li>
+            <li>Github</li>
+        </ul>
+        <div>
+            <p>SLIDER</p>
+        </div>
+        <navbar>
+            <ul>
+                <li>Me</li>
+                <li>Articles</li>
+                <li>Projects</li>
+                <li>Talks</li>
+            </ul>
+        </navbar>
+    </header>
+    <main>
+
+    </main>
 </body>
+
 </html>
