--- a/index.html
+++ b/index.html
@@ -6,27 +6,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>hierror</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <script src="js/main.js"></script>
 </head>
 
 <body>
     <header>
-        <h1>hierror</h1>
-        <ul>
-            <li>Twitter</li>
-            <li>Linkedin</li>
-            <li>Github</li>
-        </ul>
+        <navbar id="info-nav">
+            <h1 id="logo">
+                <a href=".">&lt;hierror/&gt;</a>
+            </h1>
+            <ul id="sm-list">
+                <li class="sm-item">
+                    <a href="https://twitter.com/hierror404 ">
+                        <img src="img/icons/twitter.png" alt="Twitter page">
+                    </a>
+                </li>
+                <li class="sm-item">
+                    <a href="#">
+                        <img src="img/icons/linkedin.png" alt="Linkedin page">
+                    </a>
+                </li>
+                <li class="sm-item">
+                    <a href="#">
+                        <img src="img/icons/github.png" alt="Github page">
+                    </a>
+                </li>
+            </ul>
+        </navbar>
         <div>
             <p>SLIDER</p>
         </div>
-        <navbar>
-            <ul>
-                <li>Me</li>
-                <li>Articles</li>
-                <li>Projects</li>
-                <li>Talks</li>
+        <navbar id="content-nav">
+            <ul id="content-list">
+                <li class="content-item">
+                    <a href="#">Me</a>
+                </li>
+                <li class="content-item">
+                    <a href="#">Articles</a>
+                </li>
+                <li class="content-item">
+                    <a href="#">Projects</a>
+                </li>
+                <li class="content-item">
+                    <a href="#">Talks</a>
+                </li>
             </ul>
         </navbar>
     </header>
