--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>hierror</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Lato" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <script src="js/main.js"></script>
@@ -18,28 +18,6 @@
             <h1 id="logo">
                 <a href=".">&lt;hierror/&gt;</a>
             </h1>
-            <ul id="sm-list">
-                <li class="sm-item">
-                    <a href="https://twitter.com/hierror404 ">
-                        <img src="img/icons/twitter.png" alt="Twitter page">
-                    </a>
-                </li>
-                <li class="sm-item">
-                    <a href="#">
-                        <img src="img/icons/linkedin.png" alt="Linkedin page">
-                    </a>
-                </li>
-                <li class="sm-item">
-                    <a href="#">
-                        <img src="img/icons/github.png" alt="Github page">
-                    </a>
-                </li>
-            </ul>
-        </navbar>
-        <div>
-            <p>SLIDER</p>
-        </div>
-        <navbar id="content-nav">
             <ul id="content-list">
                 <li class="content-item">
                     <a href="#">Me</a>
@@ -54,7 +32,27 @@
                     <a href="#">Talks</a>
                 </li>
             </ul>
+            <ul id="sm-list">
+                <li class="sm-item">
+                    <a href="https://twitter.com/hierror404" target="_blank">
+                        <img src="img/icons/twitter.png" alt="Twitter page">
+                    </a>
+                </li>
+                <li class="sm-item">
+                    <a href="https://www.linkedin.com/in/hierrodscherer/" target="_blank">
+                        <img src="img/icons/linkedin.png" alt="Linkedin page">
+                    </a>
+                </li>
+                <li class="sm-item">
+                    <a href="https://github.com/hierror" target="_blank">
+                        <img src="img/icons/github.png" alt="Github page">
+                    </a>
+                </li>
+            </ul>
         </navbar>
+        <div>
+            <p>SLIDER</p>
+        </div>
     </header>
     <main>
 
