--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>hierror</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Lato" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Righteous" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <script src="js/main.js"></script>
@@ -16,11 +16,11 @@
     <header>
         <navbar id="info-nav">
             <h1 id="logo">
-                <a href=".">&lt;hierror/&gt;</a>
+                <a href=".">hi<span>error</span></a>
             </h1>
             <ul id="content-list">
                 <li class="content-item">
-                    <a href="#">Me</a>
+                    <a href="#" onclick="slideIn()">Me</a>
                 </li>
                 <li class="content-item">
                     <a href="#">Articles</a>
@@ -50,12 +50,9 @@
                 </li>
             </ul>
         </navbar>
-        <div>
-            <p>SLIDER</p>
-        </div>
     </header>
     <main>
-
+        
     </main>
 </body>
 
