Layout almost done;

--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
                 <span class="surname">Duarte</span>
             </h1>
         </div>
-        <p>A newby web developer trying to grow both professionally and socially.</p>
+        <p class="cool-sentence">A newby web developer trying to grow both professionally and socially.</p>
         <nav>
-            <ul>
-                <li>
+            <ul class="navbar-list">
+                <li class="navbar-list-item">
                     <a href="#about">
                         About
                     </a>
                 </li>
-                <li>
+                <li class="navbar-list-item">
                     <a href="https://dev.to/hierror">
                         Blog
                     </a>
                 </li>
-                <li>
+                <li class="navbar-list-item">
                     <a href="https://www.youtube.com/channel/UC0M4xFRKBUC0ZS4KxVQ9f7g/featured?disable_polymer=1">
                         Talks
                     </a>
                 </li>
-                <li>
+                <li class="navbar-list-item">
                     <a href="https://github.com/hierror">
                         Projects
                     </a>
@@ -61,21 +61,15 @@
                     <img src="img/github.svg" alt="Github icon" width="32" height="32" />
                 </a>
             </li>
+            <li class="social-media-item">
+                <address>
+                    <a href="mailto:hierrodscherer@gmail.com">
+                        <img src="img/gmail.svg" alt="Email icon" width="32" height="32" />
+                    </a>
+                </address>
+            </li>
         </ul>
     </header>
-    <section id="about">
-        <p>Hello, I'm Hierro Duarte Scherer and I am a profissonal web developer. I mean, kind of a web developer.</p>
-        <p>Today I'm 18 years old and I've been programming since I was 15, but I'm goind deep in all of this techworld nowadays
-            (am I?).</p>
-        <p>I'm working at
-            <a href="https://deliverymuch.com.br">Delivery Much</a>.
-        </p>
-    </section>
-    <div>Icons made by
-        <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from
-        <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by
-        <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
-    </div>
 </body>
 
 </html>
