CSS corrections made and HTML sections added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 
 <head>
     <meta charset="utf-8" />
@@ -12,16 +12,16 @@
 </head>
 
 <body>
-    <header>
-        <div class="myself">
-            <img id="profile-picture" src="img/my-face.jpg" width="112" height="200" />
-            <h1>
+    <header id="header">
+        <div class="header-group">
+            <!--<img id="profile-picture" src="img/my-face.jpg" width="112" height="200" />-->
+            <h1 class="name">
                 Hierro
                 <span class="surname">Duarte</span>
             </h1>
         </div>
-        <p class="cool-sentence">A newby web developer trying to grow both professionally and socially.</p>
-        <nav>
+        <p class="header-sentence">A newby web developer trying to grow both professionally and socially.</p>
+        <nav id="navbar">
             <ul class="navbar-list">
                 <li class="navbar-list-item">
                     <a href="#about">
@@ -70,6 +70,21 @@
             </li>
         </ul>
     </header>
+    <section id="about">
+        <h2>About</h2>
+    </section>
+    <section id="blog">
+        <h2>About</h2>
+    </section>
+    <section id="talks">
+        <h2>About</h2>
+    </section>
+    <section id="projects">
+        <h2>About</h2>
+    </section>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
