--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
                     </a>
                 </li>
                 <li class="navbar-list-item">
-                    <a href="https://dev.to/hierror">
+                    <a href="#blog">
                         Blog
                     </a>
                 </li>
                 <li class="navbar-list-item">
-                    <a href="https://www.youtube.com/channel/UC0M4xFRKBUC0ZS4KxVQ9f7g/featured?disable_polymer=1">
+                    <a href="#talks">
                         Talks
                     </a>
                 </li>
                 <li class="navbar-list-item">
-                    <a href="https://github.com/hierror">
+                    <a href="#projects">
                         Projects
                     </a>
                 </li>
@@ -61,29 +61,25 @@
                     <img src="img/github.svg" alt="Github icon" width="32" height="32" />
                 </a>
             </li>
-            <li class="social-media-item">
-                <address>
-                    <a href="mailto:hierrodscherer@gmail.com">
-                        <img src="img/gmail.svg" alt="Email icon" width="32" height="32" />
-                    </a>
-                </address>
-            </li>
         </ul>
+        <div class="header-background">
+            
+        </div>
     </header>
-    <section id="about">
-        <h2>About</h2>
+    <section class="content-section" id="about">
+        <h2 class="content-header">About</h2>
     </section>
-    <section id="blog">
-        <h2>About</h2>
+    <section class="content-section" id="blog">
+        <h2 class="content-header">Blog</h2>
     </section>
-    <section id="talks">
-        <h2>About</h2>
+    <section class="content-section" id="talks">
+        <h2 class="content-header">Talks</h2>
     </section>
-    <section id="projects">
-        <h2>About</h2>
+    <section class="content-section" id="projects">
+        <h2 class="content-header">Projects</h2>
     </section>
     <footer>
-
+        <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
     </footer>
 </body>
 
