First finished version

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>hierror</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Poor+Story" rel="stylesheet">
+    <script src="js/dist/smooth-scroll.polyfills.js"></script>
     <script src="js/main.js"></script>
 </head>
 
@@ -20,32 +21,39 @@
                 <span class="surname">Duarte</span>
             </h1>
         </div>
-        <p class="header-sentence">A newby web developer trying to grow both professionally and socially.</p>
-        <nav id="navbar">
+        <p class="header-sentence">brazilian web developer working at
+            <a href="https://deliverymuch.com.br/">Delivery Much</a>
+        </p>
+        <!--<nav id="navbar">
             <ul class="navbar-list">
-                <li class="navbar-list-item">
-                    <a href="#about">
+               <li class="navbar-list-item">
+                    <a data-scroll href="#about">
                         About
                     </a>
                 </li>
-                <li class="navbar-list-item">
+                <li data-scroll class="navbar-list-item">
                     <a href="#blog">
                         Blog
                     </a>
                 </li>
-                <li class="navbar-list-item">
+                <li data-scroll class="navbar-list-item">
                     <a href="#talks">
                         Talks
                     </a>
                 </li>
-                <li class="navbar-list-item">
+                <li data-scroll class="navbar-list-item">
                     <a href="#projects">
                         Projects
                     </a>
                 </li>
             </ul>
-        </nav>
+        </nav>-->
         <ul class="social-media">
+            <li class="social-media-item">
+                <a href="https://github.com/hierror">
+                    <img src="img/github.svg" alt="Github icon" width="32" height="32" />
+                </a>
+            </li>
             <li class="social-media-item">
                 <a href="https://twitter.com/hierror404">
                     <img src="img/twitter.svg" alt="Twitter icon" width="32" height="32" />
@@ -56,17 +64,15 @@
                     <img src="img/linkedin.svg" alt="Linkedin icon" width="32" height="32" />
                 </a>
             </li>
-            <li class="social-media-item">
-                <a href="https://github.com/hierror">
-                    <img src="img/github.svg" alt="Github icon" width="32" height="32" />
-                </a>
-            </li>
         </ul>
         <div class="header-background">
-            
+
         </div>
+        <p class="email">
+            get in touch at <a href="mailto:hierrodscherer@gmail.com">hierrodscherer@gmail.com</a>
+        </p>
     </header>
-    <section class="content-section" id="about">
+    <!--<section class="content-section" id="about">
         <h2 class="content-header">About</h2>
     </section>
     <section class="content-section" id="blog">
@@ -80,7 +86,7 @@
     </section>
     <footer>
         <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
-    </footer>
+    </footer>-->
 </body>
 
 </html>
