--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html lang="pt">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117546996-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-117546996-2');
+    </script>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>hierror</title>
@@ -69,7 +81,8 @@
 
         </div>
         <p class="email">
-            get in touch at <a href="mailto:hierrodscherer@gmail.com">hierrodscherer@gmail.com</a>
+            get in touch at
+            <a href="mailto:hierrodscherer@gmail.com">hierrodscherer@gmail.com</a>
         </p>
     </header>
     <!--<section class="content-section" id="about">
