--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="pt">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117546996-2"></script>
     <script>
@@ -14,13 +17,13 @@
 
         gtag('config', 'UA-117546996-2');
     </script>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>hierror</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Hi, I'm a web developer!">
+    <meta name="robots" content="index,follow"><!-- All Search Engines -->
+    <meta name="googlebot" content="index,follow"><!-- Google Specific -->
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <link href="https://fonts.googleapis.com/css?family=Raleway|Poor+Story" rel="stylesheet">
-    <script src="js/dist/smooth-scroll.polyfills.js"></script>
+    <!--<script src="js/dist/smooth-scroll.polyfills.js"></script>-->
     <script src="js/main.js"></script>
 </head>
 
